res/css/style.css
@font-face {
  font-family: 'vcr-osd';
  src: url('../fonts/VCROSDMono.woff2') format('woff2');
  src: url('../fonts/VCROSDMono.woff') format('woff'), url('../fonts/VCROSDMono.eot?#iefix') format('embedded-opentype'), url('../fonts/VCROSDMono.eot'), url('../fonts/vcr-osd.ttf');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'fixedsys';
  src: url('../fonts/fixedsys.eot');
  src: url('../fonts/fixedsys.woff') format('woff'), url('/r/r/fixedsys.ttf') format('embedded-opentype'), url('../fonts/fixedsys.ttf') format('truetype'), url('../fonts/fixedsys.svg') format('svg');
  font-display: swap;
}

html, body {
  margin: 0;
  padding: 0;
}

@keyframes rotation {
  0% {
    transform: rotate(-10deg) scale(4.0);
  }
  50% {
    transform: rotate(20deg) scale(3.5);
  }
  100% {
    transform: rotate(-10deg) scale(4);
  }
}

@keyframes fuck {
  0% {
    transform: skewY(-20deg);
  }

  50% {
    transform: skewY(-15deg);
  }

  100% {
    transform: skewY(-20deg);
  }
}

@keyframes flash-opacity {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fingers {
  0% {
    cursor: url('../img/hand1.png'), auto;
  }

  33% {
    cursor: url('../img/fuckyou.png'), auto;
  }

  66% {
    cursor: url('../img/hand3.png'), auto;
  }

  100% {
    cursor: url('../img/hand4.png'), auto;
  }
}

body {
  background: black url('../img/stars.gif');
  color: white;
  background-repeat: repeat;
  image-rendering: optimizeSpeed;
  image-rendering: -moz-crisp-edges;
  image-rendering: -o-crisp-edges;
  image-rendering: -webkit-optimize-contrast;
  image-rendering: pixelated;
  image-rendering: optimize-contrast;
  -ms-interpolation-mode: nearest-neighbor;
}

.main-content-container {
  position: fixed;
  width: 100%;
  height: 100%;
  background: url('../img/fire.gif') center center fixed;
  background-size: 64em 100%;
  background-repeat: repeat-x;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding-left: 5em;
}

.floater {
  margin-left: 3em;
  margin-top: 10em;
  animation: rotation 30s infinite linear;
  color: red;
}

@media screen and (max-width: 45em) {
  .floater {
    transform: scale(1);
  }
}

h1 {
  font-family: 'vcr-osd';
  font-weight: normal;
  font-size: 3em;
}

.fuck {
  position: fixed;
  top: 6em;
  left: 1em;
  animation: fuck 1s infinite;
  color: white;
}

.fuck:hover {
  text-decoration: overline;
}

a {
  color: white;
}

a:hover {
  animation: fingers 0.25s infinite steps(4) alternate;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: url('../img/static.gif');
  background-repeat: repeat;
  background-size: 60em 20em;
  background-position: center;
  opacity: 0.1;
  z-index: 9999;
  pointer-events: none;
}

.err {
  position: fixed;
  animation: flash-opacity .5s steps(1) infinite;
  left: 45%;
  top: 20%;
  pointer-events: none;
  z-index: 7000;
  display: none;
}

@media screen and (max-width: 45em) {
  .err {
    display: none;
  }
  .bring-in {
    margin-left: 0em !important;
  }
  .asteroid {
    display: none;
  }
}

@keyframes cloud {
  0% {
    transform: rotate(10deg) scale(2.0);
    left: 0em;
  }
  50% {
    transform: rotate(-20deg) scale(1.5);
    left: 45em;
  }
  100% {
    transform: rotate(10deg) scale(2.0);
    left: 0em;
  }
}

.clouds {
  position: fixed;
  top: 5em;
  width: 40%;
  height: 30%;
  opacity: .15;
  z-index: 6000;
  pointer-events: none;
  animation: cloud 30s infinite linear;
}

@keyframes asteroid {
  0% {
    transform: rotate(-30deg) scale(1.0);
  }
  50% {
    transform: rotate(20deg) scale(1.2);
  }
  100% {
    transform: rotate(-30deg) scale(1);
  }
}

.asteroid {
  position: fixed;
  right: 3em;
  top: 3em;
  width: 15em;
  animation: asteroid 100s linear infinite;
  z-index: 2500;
}

.textbubble {
  position: fixed;
  left: 15em;
  top: 4em;
  background: khaki;
  color: black;
  border: 2px solid white;
  border-radius: 2px;
  padding: .4em;
  font-family: 'fixedsys';
  font-size: 12pt;
  max-width: 15em;
}

